# avito_merch_store

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  TASKS.md  alembic.ini  coverage.txt  docker-compose.yaml  init_merch.py  locustfile.py  pyproject.toml  requirements.txt
migrations/: env.py
src/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
tests/: conftest.py  test_auth.py  test_crud.py  test_main.py
